# VisionInspectionPro

./: .gitignore  README.md
src/: CMakeLists.txt  VisionInspectionPro.sln  main.cpp  main.vcxproj  main.vcxproj.filters
src/AlgProcessor/: IAlgProcessor.h
src/CameraGrabber/: ICameraGrabber.h
src/CameraGrabber/DMKCamera/: DMKCamera.cpp  DMKCamera.h  DMKCamera.vcxproj  DMKCamera.vcxproj.filters  ReadMe.txt  dllmain.cpp  dllmain.h  stdafx.cpp
src/CameraGrabber/DalsaCamera/: CMakeLists.txt  DalsaCamera.cpp  DalsaCamera.h  DalsaDll.cpp  DalsaDll.h
src/CameraGrabber/HikCamera/: DllMain.cpp  HikCamera.cpp  HikCamera.h  HikCamera.vcxproj  HikCamera.vcxproj.filters  ReadMe.txt  dllmain.h  stdafx.cpp
src/Export/: IExport.h
src/Export/DbExport/: CMakeLists.txt  DbDll.cpp  DbDll.h  DbExport.cpp  DbExport.h
src/Facade/: Facade.cpp  Facade.h  FrameBuilder.cpp  FrameBuilder.h  ModuleFactory.hpp
src/Include/CommonInclude/: InspectException.h  Memory.hpp  PlatFormHead.h  TypeDefine.h  utility.hpp
src/Include/Configure/: Configure.hpp
src/Include/Logger/: BroadCastLogger.hpp  Console_Logger.h  Text_Logger.h  UI_Logger.h
src/Include/PlatForm/: LinuxCore.h  WindowsCore.h
src/Mediator/: IMediator.h  Mediator.hpp  ThreadSafe_Queue.hpp
src/Mediator/ThreadMediator/: ReadMe.txt  ThreadMediator.cpp  ThreadMediator.h  ThreadMediator.pro  ThreadMediator.vcxproj  ThreadMediator.vcxproj.filters  ThreadMediator_global.h  dllmain.cpp  dllmain.h  moc_ThreadMediator.cpp  stdafx.cpp  thread_pool.h
src/PlcAgent/: IPlcAgent.h
src/PlcAgent/ModbusPlc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ModbusDll.cpp  ModbusDll.h  ModbusPlc.cpp  ModbusPlc.h  ModbusPlc.sln  ModbusPlc.vcxproj  ModbusPlc.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
src/UI/: Convert.h  IForDisplay.h
src/UI/CameraTest/: CameraShot.cpp  CameraShot.h  CameraTest.ui  CameraWnd.cpp  convert.h  main.cpp  mainwindow.cpp  mainwindow.h
src/UI/ImageZoom/: ImageZoom.pro  ImageZoom.pro.user.bac2126.3.3-pre1  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  res.qrc
src/UI/OnDisplay/: .qmake.stash  CameraShot.cpp  CameraShot.h  OnDisplay.pro  OnDisplay.ui  OnDisplay.vcxproj  OnDisplay.vcxproj.filters  ZhConvert.h  main.cpp  mainwindow.cpp  mainwindow.h  (+1 more)
(+190 files in other folders)
